--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="plugins/revolution/css/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
     <link href="plugins/revolution/css/navigation.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootsnav.min.css">
     <!-- REVOLUTION NAVIGATION STYLES -->
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
@@ -20,6 +22,7 @@
         type="image/x-icon">
     <link rel="icon" href="https://html.kodesolution.com/2023/disle-html/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css">
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -84,7 +87,7 @@
 
                         <!-- Header Search -->
                         <button class="ui-btn ui-btn search-btn">
-                            <span class="icon lnr lnr-icon-search"></span>
+                            <span class="lnr lnr-magnifier"></span>
                         </button>
                     </div>
 
@@ -188,7 +191,8 @@
                             + 92 (8800) - 9850
                         </a>
                         <!-- Mobile Nav toggler -->
-                        <div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
+                        <div class="mobile-nav-toggler"><span class="lnr lnr-menu"></span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -203,7 +207,8 @@
                         <div class="nav-logo"><a href="index.html"><img
                                     src="https://html.kodesolution.com/2023/disle-html/images/logo.png" alt=""
                                     title=""></a></div>
-                        <div class="close-btn"><i class="icon fa fa-times"></i></div>
+                        <div class="close-btn"><i class="fas fa-times"></i> <!-- Font Awesome Solid "X" icon -->
+                        </div>
                     </div>
 
                     <ul class="navigation clearfix">
@@ -213,7 +218,8 @@
                         <li>
                             <!-- Contact Info Box -->
                             <div class="contact-info-box">
-                                <i class="icon lnr-icon-phone-handset"></i>
+                                <i class="lnr lnr-phone-handset"></i>
+
                                 <span class="title">Call Now</span>
                                 <a href="tel:+92880098670">+92 (8800) - 98670</a>
                             </div>
@@ -221,7 +227,8 @@
                         <li>
                             <!-- Contact Info Box -->
                             <div class="contact-info-box">
-                                <span class="icon lnr-icon-envelope1"></span>
+                                <span class="lnr lnr-envelope"></span>
+
                                 <span class="title">Send Email</span>
                                 <a href="/cdn-cgi/l/email-protection#aac2cfc6daeac9c5c7dacbc4d384c9c5c7"><span
                                         class="__cf_email__"
@@ -231,7 +238,7 @@
                         <li>
                             <!-- Contact Info Box -->
                             <div class="contact-info-box">
-                                <span class="icon lnr-icon-clock"></span>
+                                <span class="lnr lnr-clock"></span>
                                 <span class="title">Send Email</span>
                                 Mon - Sat 8:00 - 6:30, Sunday - CLOSED
                             </div>
@@ -287,7 +294,8 @@
                             </nav><!-- Main Menu End-->
 
                             <!--Mobile Navigation Toggler-->
-                            <div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
+                            <div class="mobile-nav-toggler"><span class="lnr lnr-menu"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
