--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootsnav.min.css">
+    <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <!-- REVOLUTION NAVIGATION STYLES -->
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
@@ -96,14 +97,13 @@
                     <div class="nav-outer">
                         <nav class="nav main-menu">
                             <ul class="navigation">
-                                <li class="current ">
-                                    <a href="index.html">Home</a>
+                                <li class="current dropdown"><a href="index.html">Home</a>
                                     <ul>
                                         <li><a href="index.html">Home page 01</a></li>
                                         <li><a href="index-2.html">Home page 02</a></li>
                                         <li><a href="index-3.html">Home page 03</a></li>
                                         <li><a href="index-4.html">Home page 04</a></li>
-                                        <li class=""><a href="#">Dark Styles</a>
+                                        <li class="dropdown"> <a href="#">Dark Styles</a>
                                             <ul>
                                                 <li><a href="index-1-dark.html">Home Dark One</a></li>
                                                 <li><a href="index-2-dark.html">Home Dark Two</a></li>
@@ -111,7 +111,7 @@
                                                 <li><a href="index-4-dark.html">Home Dark Four</a></li>
                                             </ul>
                                         </li>
-                                        <li class=""><a href="#">Boxed Styles</a>
+                                        <li class="dropdown"><a href="#">Boxed Styles</a>
                                             <ul>
                                                 <li><a href="index-1-boxed.html">Home Boxed One</a></li>
                                                 <li><a href="index-2-boxed.html">Home Boxed Two</a></li>
@@ -119,7 +119,7 @@
                                                 <li><a href="index-4-boxed.html">Home Boxed Four</a></li>
                                             </ul>
                                         </li>
-                                        <li class=""><a href="#">Single Styles</a>
+                                        <li class="dropdown"><a href="#">Single Styles</a>
                                             <ul>
                                                 <li><a href="index-1-Single.html">Home Single One</a></li>
                                                 <li><a href="index-2-Single.html">Home Single Two</a></li>
@@ -128,7 +128,7 @@
                                             </ul>
                                         </li>
                                         <li><a href="index-1-rtl.html">Home RTL One</a></li>
-                                        <li class=""><a href="#">Header Styles</a>
+                                        <li class="dropdown"><a href="#">Header Styles</a>
                                             <ul>
                                                 <li><a href="index.html">Header Style One</a></li>
                                                 <li><a href="index-2.html">Header Style Two</a></li>
@@ -138,16 +138,16 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li class=""><a href="page-about.html">Pages</a>
+                                <li class="dropdown"><a href="page-about.html">Pages</a>
                                     <ul>
                                         <li><a href="page-about.html">About</a></li>
-                                        <li class=""><a href="page-team.html">Team</a>
+                                        <li class="dropdown"><a href="page-team.html">Team</a>
                                             <ul>
                                                 <li><a href="page-team.html">Team Grid</a></li>
                                                 <li><a href="page-team-details.html">Team Details</a></li>
                                             </ul>
                                         </li>
-                                        <li class=""><a href="shop-products.html">Shop</a>
+                                        <li class="dropdown"><a href="shop-products.html">Shop</a>
                                             <ul>
                                                 <li><a href="shop-products.html">Products</a></li>
                                                 <li><a href="shop-products-sidebar.html">Products with Sidebar</a></li>
@@ -161,19 +161,19 @@
                                         <li><a href="page-404.html">Page 404</a></li>
                                     </ul>
                                 </li>
-                                <li class=""><a href="page-services.html">Services</a>
+                                <li class="dropdown"><a href="page-services.html">Services</a>
                                     <ul>
                                         <li><a href="page-services.html">Services Grid</a></li>
                                         <li><a href="page-service-details.html">Service Details</a></li>
                                     </ul>
                                 </li>
-                                <li class=""><a href="page-projects.html">Projects</a>
+                                <li class="dropdown"><a href="page-projects.html">Projects</a>
                                     <ul>
                                         <li><a href="page-projects.html">Projects Grid</a></li>
                                         <li><a href="page-project-details.html">Project Details</a></li>
                                     </ul>
                                 </li>
-                                <li class=""><a href="news-grid.html">News</a>
+                                <li class="dropdown"><a href="news-grid.html">News</a>
                                     <ul>
                                         <li><a href="news-grid.html">News Grid</a></li>
                                         <li><a href="news-details.html">News Details</a></li>
@@ -184,6 +184,7 @@
                         </nav>
                         <!-- Main Menu End-->
                     </div>
+
 
                     <div class="outer-box">
                         <a href="tel:+92(8800)9806" class="info-btn">
