--- a/page-contact.html
+++ b/page-contact.html
@@ -267,44 +267,46 @@
 					</form>
 					<!-- Contact Form Validation-->
 				</div>
-				<div class="col-xl-5 col-lg-6">
-					<div class="contact-details__right">
-						<div class="sec-title">
-							<span class="sub-title">Need any help?</span>
-							<h2>Get in touch with us</h2>
-							<div class="text">Lorem ipsum is simply free text available dolor sit amet consectetur notted adipisicing elit sed do eiusmod tempor incididunt simply dolore magna.</div>
-						</div>
-						<ul class="list-unstyled contact-details__info">
-							<li>
-								<div class="icon">
-									<span class="lnr-icon-phone-plus"></span>
-								</div>
-								<div class="text">
-									<h6>Have any question?</h6>
-									<a href="tel:980089850"><span>Free</span> +92 (020)-9850</a>
-								</div>
-							</li>
-							<li>
-								<div class="icon">
-									<span class="lnr-icon-envelope1"></span>
-								</div>
-								<div class="text">
-									<h6>Write email</h6>
-									<a href="/cdn-cgi/l/email-protection#cca2a9a9a8a4a9a0bc8cafa3a1bcada2b5e2afa3a1"><span class="__cf_email__" data-cfemail="90fef5f5f4f8f5fce0d0f3fffde0f1fee9bef3fffd">[email&#160;protected]</span></a>
-								</div>
-							</li>
-							<li>
-								<div class="icon">
-									<span class="lnr-icon-location"></span>
-								</div>
-								<div class="text">
-									<h6>Visit anytime</h6>
-									<span>66 broklyn golden street. New York</span>
-								</div>
-							</li>
-						</ul>
-					</div>
+				<!-- Contact Section -->
+<div class="col-xl-5 col-lg-6">
+	<div class="contact-details__right">
+		<div class="sec-title">
+			<span class="sub-title">Need any help?</span>
+			<h2>Get in touch with us</h2>
+			<div class="text">We are here to assist you with any inquiries. Contact us for professional support and guidance.</div>
+		</div>
+		<ul class="list-unstyled contact-details__info">
+			<li>
+				<div class="icon">
+					<span class="lnr lnr-phone-handset"></span>
 				</div>
+				<div class="text">
+					<h6>Have any questions?</h6>
+					<a href="tel:980089850"><span>Call Us:</span> +92 (020)-9850</a>
+				</div>
+			</li>
+			<li>
+				<div class="icon">
+					<span class="lnr lnr-envelope"></span>
+				</div>
+				<div class="text">
+					<h6>Write to us</h6>
+					<a href="mailto:info@theart.com">info@theart.com</a>
+				</div>
+			</li>
+			<li>
+				<div class="icon">
+					<span class="lnr lnr-map-marker"></span>
+				</div>
+				<div class="text">
+					<h6>Visit us</h6>
+					<span>66 Brooklyn Golden Street, New York</span>
+				</div>
+			</li>
+		</ul>
+	</div>
+</div>
+
 			</div>
 		</div>
 	</section>
