--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- REVOLUTION NAVIGATION STYLES -->
     <link href="css/style.css" rel="stylesheet">
-   >
+   
 
 
     <link rel="shortcut icon" href="https://html.kodesolution.com/2023/disle-html/images/favicon.png"
@@ -83,8 +83,9 @@
                 <!-- Main box -->
                 <div class="main-box">
                     <div class="logo-box">
-                        <div class="logo"><a href="index.html"><img
-                                    src="https://html.kodesolution.com/2023/disle-html/images/logo.png" alt=""
+                        <div class="logo"><a href="index.html">
+                            <img width="90" height="90"
+                                    src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" alt=""
                                     title="Tronis"></a>
                         </div>
 
@@ -142,7 +143,7 @@
                 <nav class="menu-box">
                     <div class="upper-box">
                         <div class="nav-logo"><a href="index.html"><img
-                                    src="https://html.kodesolution.com/2023/disle-html/images/logo.png" alt=""
+                                    src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" width="90" height="90" alt=""
                                     title=""></a></div>
                         <div class="close-btn"><i class="fas fa-times"></i> <!-- Font Awesome Solid "X" icon -->
                         </div>
@@ -214,8 +215,10 @@
                     <div class="inner-container">
                         <!--Logo-->
                         <div class="logo">
-                            <a href="index.html" title=""><img
-                                    src="https://html.kodesolution.com/2023/disle-html/images/logo-2.png" alt=""
+                            <a href="index.html" title="">
+                                
+                                <img width="60" height="60"
+                                    src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" alt=""
                                     title=""></a>
                         </div>
 
@@ -1216,7 +1219,7 @@
                     <div class="row">
                         <div class="logo-column col-lg-4 col-md-4 order-2">
                             <div class="footer-logo"><img
-                                    src="https://html.kodesolution.com/2023/disle-html/images/logo.png" alt=""></div>
+                                    src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" width="90" height="90" alt=""></div>
                         </div>
                         <div class="links-column col-lg-4 col-md-4 order-3">
                             <ul class="footer-links">
