--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+ 
+
 
     <!-- REVOLUTION NAVIGATION STYLES -->
     <link href="css/style.css" rel="stylesheet">
@@ -143,7 +145,7 @@
                 <nav class="menu-box">
                     <div class="upper-box">
                         <div class="nav-logo"><a href="index.html"><img
-                                    src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" width="90" height="90" alt=""
+                                    src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" width="60" height="90" alt=""
                                     title=""></a></div>
                         <div class="close-btn"><i class="fas fa-times"></i> <!-- Font Awesome Solid "X" icon -->
                         </div>
@@ -156,7 +158,7 @@
                         <li>
                             <!-- Contact Info Box -->
                             <div class="contact-info-box">
-                                <i class="lnr lnr-phone-handset"></i>
+                                <i class="icon lnr lnr-phone-handset"></i>
 
                                 <span class="title">Call Now</span>
                                 <a href="tel:+92880098670">+92 (8800) - 98670</a>
@@ -165,7 +167,7 @@
                         <li>
                             <!-- Contact Info Box -->
                             <div class="contact-info-box">
-                                <span class="lnr lnr-envelope"></span>
+                                <i class="icon lnr lnr-envelope"></i>
 
                                 <span class="title">Send Email</span>
                                 <a href="/cdn-cgi/l/email-protection#aac2cfc6daeac9c5c7dacbc4d384c9c5c7"><span
@@ -176,7 +178,7 @@
                         <li>
                             <!-- Contact Info Box -->
                             <div class="contact-info-box">
-                                <span class="lnr lnr-clock"></span>
+                                <i class="icon lnr lnr-clock"></i>
                                 <span class="title">Send Email</span>
                                 Mon - Sat 8:00 - 6:30, Sunday - CLOSED
                             </div>
@@ -1076,7 +1078,7 @@
         
 
         <!-- Main Footer -->
-        <footer class="main-footer">
+        <footer class="main-footer" >
             <div class="bg bg-pattern-6"></div>
             <!-- Footer Uppper -->
             <div class="footer-upper">
