--- a/page-about.html
+++ b/page-about.html
@@ -72,9 +72,8 @@
 				<!-- Main box -->
 				<div class="main-box">
 					<div class="logo-box">
-						<div class="logo"><a href="index.html"><img
-									src="https://html.kodesolution.com/2023/disle-html/images/logo.png" alt=""
-									title="Tronis"></a></div>
+						<div class="logo"><a href="index.html"><img width="90" height="90"
+									src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" alt="" title="Tronis"></a></div>
 
 						<!-- Header Search -->
 						<button class="ui-btn ui-btn search-btn">
@@ -127,9 +126,8 @@
 				<!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
 				<nav class="menu-box">
 					<div class="upper-box">
-						<div class="nav-logo"><a href="index.html"><img
-									src="https://html.kodesolution.com/2023/disle-html/images/logo.png" alt=""
-									title=""></a></div>
+						<div class="nav-logo"><a href="index.html"><img width="60" height="90"
+									src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" alt="" title=""></a></div>
 						<div class="close-btn"><i class="icon fa fa-times"></i></div>
 					</div>
 
@@ -137,33 +135,35 @@
 						<!--Keep This Empty / Menu will come through Javascript-->
 					</ul>
 					<ul class="contact-list-one">
-						<li>
-							<!-- Contact Info Box -->
-							<div class="contact-info-box">
-								<i class="icon lnr-icon-phone-handset"></i>
-								<span class="title">Call Now</span>
-								<a href="tel:+92880098670">+92 (8800) - 98670</a>
-							</div>
-						</li>
-						<li>
-							<!-- Contact Info Box -->
-							<div class="contact-info-box">
-								<span class="icon lnr-icon-envelope1"></span>
-								<span class="title">Send Email</span>
-								<a href="/cdn-cgi/l/email-protection#472f222b370724282a3726293e6924282a"><span
-										class="__cf_email__"
-										data-cfemail="b6ded3dac6f6d5d9dbc6d7d8cf98d5d9db">[email&#160;protected]</span></a>
-							</div>
-						</li>
-						<li>
-							<!-- Contact Info Box -->
-							<div class="contact-info-box">
-								<span class="icon lnr-icon-clock"></span>
-								<span class="title">Send Email</span>
-								Mon - Sat 8:00 - 6:30, Sunday - CLOSED
-							</div>
-						</li>
-					</ul>
+                        <li>
+                            <!-- Contact Info Box -->
+                            <div class="contact-info-box">
+                                <i class="icon lnr lnr-phone-handset"></i>
+
+                                <span class="title">Call Now</span>
+                                <a href="tel:+92880098670">+92 (8800) - 98670</a>
+                            </div>
+                        </li>
+                        <li>
+                            <!-- Contact Info Box -->
+                            <div class="contact-info-box">
+                                <i class="icon lnr lnr-envelope"></i>
+
+                                <span class="title">Send Email</span>
+                                <a href="/cdn-cgi/l/email-protection#aac2cfc6daeac9c5c7dacbc4d384c9c5c7"><span
+                                        class="__cf_email__"
+                                        data-cfemail="7c1419100c3c1f13110c1d1205521f1311">[email&#160;protected]</span></a>
+                            </div>
+                        </li>
+                        <li>
+                            <!-- Contact Info Box -->
+                            <div class="contact-info-box">
+                                <i class="icon lnr lnr-clock"></i>
+                                <span class="title">Send Email</span>
+                                Mon - Sat 8:00 - 6:30, Sunday - CLOSED
+                            </div>
+                        </li>
+                    </ul>
 
 
 					<ul class="social-links">
@@ -197,24 +197,24 @@
 					<div class="inner-container">
 						<!--Logo-->
 						<div class="logo">
-							<a href="index.html" title=""><img
-									src="https://html.kodesolution.com/2023/disle-html/images/logo-2.png" alt=""
+							<a href="index.html" title=""><img width="60" height="60"
+									src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" alt=""
 									title=""></a>
 						</div>
 
 						<!--Right Col-->
-						<div class="nav-outer">
-							<!-- Main Menu -->
-							<nav class="main-menu">
-								<div class="navbar-collapse show collapse clearfix">
-									<ul class="navigation clearfix">
-										<!--Keep This Empty / Menu will come through Javascript-->
-									</ul>
-								</div>
-							</nav><!-- Main Menu End-->
+						<div class=" nav-outer">
+								<!-- Main Menu -->
+								<nav class="main-menu">
+									<div class="navbar-collapse show collapse clearfix">
+										<ul class="navigation clearfix">
+											<!--Keep This Empty / Menu will come through Javascript-->
+										</ul>
+									</div>
+								</nav><!-- Main Menu End-->
 
-							<!--Mobile Navigation Toggler-->
-							<div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
+								<!--Mobile Navigation Toggler-->
+								<div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
 						</div>
 					</div>
 				</div>
@@ -264,7 +264,7 @@
 
 							<div class="other-info">
 								<div class="info-box">
-									<i  class="icon lnr lnr-phone-handset"></i>
+									<i class="icon lnr lnr-phone-handset"></i>
 									<span class="title">Get a free Quote</span>
 									<a href="tel:+2348101234567" class="info-text">+234 810 123 4567</a>
 								</div>
@@ -303,76 +303,82 @@
 					<span class="sub-title">Our Services</span>
 					<h2>Expert Digital Solutions</h2>
 				</div>
-		
+
 				<div class="row">
 					<!-- Digital Marketing -->
 					<div class="service-block-four col-lg-3 col-md-6 col-sm-12">
 						<div class="inner-box">
 							<div class="image-box">
 								<figure class="image"><a href="page-service-details.html"><img
-										src="https://html.kodesolution.com/2023/disle-html/images/resource/service2-4.jpg"
-										alt=""></a></figure>
+											src="https://html.kodesolution.com/2023/disle-html/images/resource/service2-4.jpg"
+											alt=""></a></figure>
 							</div>
 							<div class="content-box">
 								<i class="icon  lnr lnr-screen"></i>
 
 								<h5 class="title"><a href="page-service-details.html">Digital <br>Marketing</a></h5>
-								<div class="text">Helping businesses scale with expert social media management, paid ads, content marketing, and email strategies.</div>
+								<div class="text">Helping businesses scale with expert social media management, paid
+									ads, content marketing, and email strategies.</div>
 							</div>
 						</div>
 					</div>
-		
+
 					<!-- Talent & Content Management -->
 					<div class="service-block-four col-lg-3 col-md-6 col-sm-12">
 						<div class="inner-box">
 							<div class="image-box">
 								<figure class="image"><a href="page-service-details.html"><img
-										src="https://html.kodesolution.com/2023/disle-html/images/resource/service2-2.jpg"
-										alt=""></a></figure>
+											src="https://html.kodesolution.com/2023/disle-html/images/resource/service2-2.jpg"
+											alt=""></a></figure>
 							</div>
 							<div class="content-box">
 								<i class="icon lnr lnr-users"></i>
-								<h5 class="title"><a href="page-service-details.html">Talent & Content <br>Management</a></h5>
-								<div class="text">We help brands and creators grow, engage, and monetize content through strategic talent and content management solutions.</div>
+								<h5 class="title"><a href="page-service-details.html">Talent & Content
+										<br>Management</a></h5>
+								<div class="text">We help brands and creators grow, engage, and monetize content through
+									strategic talent and content management solutions.</div>
 							</div>
 						</div>
 					</div>
-		
+
 					<!-- Content Production -->
 					<div class="service-block-four col-lg-3 col-md-6 col-sm-12">
 						<div class="inner-box">
 							<div class="image-box">
 								<figure class="image"><a href="page-service-details.html"><img
-										src="https://html.kodesolution.com/2023/disle-html/images/resource/service2-3.jpg"
-										alt=""></a></figure>
+											src="https://html.kodesolution.com/2023/disle-html/images/resource/service2-3.jpg"
+											alt=""></a></figure>
 							</div>
 							<div class="content-box">
 								<i class=" icon lnr lnr-film-play"></i>
 								<h5 class="title"><a href="page-service-details.html">Content <br>Production</a></h5>
-								<div class="text">Creating high-quality videos, blogs, social media content, and multimedia production tailored to your audience.</div>
+								<div class="text">Creating high-quality videos, blogs, social media content, and
+									multimedia production tailored to your audience.</div>
 							</div>
 						</div>
 					</div>
-		
+
 					<!-- Audio & Music Services -->
 					<div class="service-block-four col-lg-3 col-md-6 col-sm-12">
 						<div class="inner-box">
 							<div class="image-box">
 								<figure class="image"><a href="page-service-details.html"><img
-										src="https://html.kodesolution.com/2023/disle-html/images/resource/service2-1.jpg"
-										alt=""></a></figure>
+											src="https://html.kodesolution.com/2023/disle-html/images/resource/service2-1.jpg"
+											alt=""></a></figure>
 							</div>
 							<div class="content-box">
 								<i class=" icon lnr lnr-volume-high"></i>
-								<h5 class="title"><a href="page-service-details.html">Audio & Music <br>Services</a></h5>
-								<div class="text">Professional music production, podcast creation, voiceovers, and sound design for brands and creators.</div>
+								<h5 class="title"><a href="page-service-details.html">Audio & Music <br>Services</a>
+								</h5>
+								<div class="text">Professional music production, podcast creation, voiceovers, and sound
+									design for brands and creators.</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		
+
 		<!--End services-section Two-->
 
 		<!-- Clients Section -->
@@ -412,72 +418,75 @@
 		<!--End Clients Section -->
 
 		<!-- Why Choose Us -->
-<section class="why-choose-us-two">
-	<div class="bg bg-pattern-11"></div>
+		<section class="why-choose-us-two">
+			<div class="bg bg-pattern-11"></div>
 
-	<div class="auto-container">
-		<div class="row">
-			<!-- Image Column -->
-			<div class="image-column col-lg-6 col-md-12">
-				<div class="inner-column">
-					<div class="sec-title">
-						<span class="sub-title">Why choose us</span>
-						<h2>Why Choose The ART?</h2>
+			<div class="auto-container">
+				<div class="row">
+					<!-- Image Column -->
+					<div class="image-column col-lg-6 col-md-12">
+						<div class="inner-column">
+							<div class="sec-title">
+								<span class="sub-title">Why choose us</span>
+								<h2>Why Choose The ART?</h2>
+							</div>
+
+							<div class="image-box">
+								<figure class="image-2"><img
+										src="https://html.kodesolution.com/2023/disle-html/images/resource/why-us-2.png"
+										alt=""></figure>
+								<figure class="image-1"><img
+										src="https://html.kodesolution.com/2023/disle-html/images/resource/why-us-1.png"
+										alt=""></figure>
+							</div>
+						</div>
 					</div>
 
-					<div class="image-box">
-						<figure class="image-2"><img
-								src="https://html.kodesolution.com/2023/disle-html/images/resource/why-us-2.png"
-								alt=""></figure>
-						<figure class="image-1"><img
-								src="https://html.kodesolution.com/2023/disle-html/images/resource/why-us-1.png"
-								alt=""></figure>
+					<!-- Features Column -->
+					<div class="features-column col-lg-6 col-md-12">
+						<div class="inner-column">
+							<div class="row">
+								<!-- Feature Block Three -->
+								<div class="feature-block-three">
+									<div class="inner-box">
+										<div class="title-box">
+											<i class="icon fa fa-user-group"></i>
+											<h5 class="title">Proven Results</h5>
+										</div>
+										<div class="text">We help small businesses and startups thrive with data-driven
+											marketing strategies that ensure growth and success.</div>
+									</div>
+								</div>
+
+								<!-- Feature Block Three -->
+								<div class="feature-block-three">
+									<div class="inner-box">
+										<div class="title-box">
+											<i class="icon fa fa-user-group"></i>
+											<h5 class="title">Industry Experts</h5>
+										</div>
+										<div class="text">Our team consists of experienced professionals in digital
+											marketing, talent management, and content creation.</div>
+									</div>
+								</div>
+
+								<!-- Feature Block Three -->
+								<div class="feature-block-three">
+									<div class="inner-box">
+										<div class="title-box">
+											<i class="icon fa fa-user-group"></i>
+											<h5 class="title">Affordable & Transparent Pricing</h5>
+										</div>
+										<div class="text">We offer high-quality services at competitive rates, ensuring
+											you get value for your investment.</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-
-			<!-- Features Column -->
-			<div class="features-column col-lg-6 col-md-12">
-				<div class="inner-column">
-					<div class="row">
-						<!-- Feature Block Three -->
-						<div class="feature-block-three">
-							<div class="inner-box">
-								<div class="title-box">
-									<i class="icon fa fa-user-group"></i>
-									<h5 class="title">Proven Results</h5>
-								</div>
-								<div class="text">We help small businesses and startups thrive with data-driven marketing strategies that ensure growth and success.</div>
-							</div>
-						</div>
-
-						<!-- Feature Block Three -->
-						<div class="feature-block-three">
-							<div class="inner-box">
-								<div class="title-box">
-									<i class="icon fa fa-user-group"></i>
-									<h5 class="title">Industry Experts</h5>
-								</div>
-								<div class="text">Our team consists of experienced professionals in digital marketing, talent management, and content creation.</div>
-							</div>
-						</div>
-
-						<!-- Feature Block Three -->
-						<div class="feature-block-three">
-							<div class="inner-box">
-								<div class="title-box">
-									<i class="icon fa fa-user-group"></i>
-									<h5 class="title">Affordable & Transparent Pricing</h5>
-								</div>
-								<div class="text">We offer high-quality services at competitive rates, ensuring you get value for your investment.</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+		</section>
 		<!-- end-benifet-sec -->
 
 		<!-- Team Section -->
@@ -703,8 +712,8 @@
 				<div class="auto-container">
 					<div class="row">
 						<div class="logo-column col-lg-4 col-md-4 order-2">
-							<div class="footer-logo"><img
-									src="https://html.kodesolution.com/2023/disle-html/images/logo.png" alt=""></div>
+							<div class="footer-logo"><img width="90" height="90"
+									src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" alt=""></div>
 						</div>
 						<div class="links-column col-lg-4 col-md-4 order-3">
 							<ul class="footer-links">
